<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="15dp"
    tools:context=".Home" >

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/logoutbox"
        android:gravity="left|center_vertical|center_horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/logout_text"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/home_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/logout_button"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="23dp"
        android:contentDescription="@string/app_logo"
        android:scaleType="centerInside"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/quickattack_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/findgame_button"
        android:layout_toRightOf="@+id/setting_button"
        android:background="@drawable/quickattack_gray"
        android:gravity="right|center_vertical|center_horizontal"
        android:paddingRight="15dp"
        android:text="@string/quickattack_title"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/findgame_button"
        android:layout_below="@+id/quickattack_button"
        android:layout_toLeftOf="@+id/credit_button"
        android:background="@drawable/profile"
        android:gravity="left|center_vertical|center_horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="53dp"
        android:text="@string/profile_text"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/rank_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/profile_button"
        android:layout_toRightOf="@+id/setting_button"
        android:background="@drawable/rank"
        android:gravity="right|center_vertical|center_horizontal"
        android:paddingRight="15dp"
        android:text="@string/ranking_text"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/setting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/gameplay_button"
        android:layout_alignBottom="@+id/gameplay_button"
        android:layout_alignLeft="@+id/home_logo"
        android:background="@drawable/roundedbuttonhome_select"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/setting_text"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/credit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/gameplay_button"
        android:layout_alignBottom="@+id/gameplay_button"
        android:layout_alignRight="@+id/home_logo"
        android:background="@drawable/roundedbuttonhome_select"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/credit_text"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/gameplay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundedbuttonhome_select"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/gameplay_text"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/findgame_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/home_logo"
        android:layout_marginTop="21dp"
        android:layout_toLeftOf="@+id/credit_button"
        android:background="@drawable/fgm"
        android:gravity="center_vertical|center_horizontal|left"
        android:paddingLeft="15dp"
        android:paddingRight="40dp"
        android:text="@string/findgame_title"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>
