<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_screen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/photo"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_logo"
        android:paddingTop="10dp"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:id="@+id/log_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_logo"
        android:layout_alignRight="@+id/login_logo"
        android:layout_below="@+id/login_logo"
        android:layout_margin="20dp"
        android:background="@drawable/logoutbox"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingLeft="15dp"
        android:paddingRight="20dp"
        android:paddingTop="25dp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/id_title_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingBottom="5dp"
            android:paddingTop="8dp"
            android:text="@string/id_title"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/id_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/id_title_log"
            android:background="@drawable/loginff"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:id="@+id/pass_title_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/id_log"
            android:paddingBottom="5dp"
            android:paddingTop="20dp"
            android:text="@string/pass_title"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pass_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/pass_title_log"
            android:background="@drawable/loginff"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:id="@+id/gap_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass_log" />

        <Button
            android:id="@+id/reg_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/pass_log"
            android:layout_below="@id/gap_login"
            android:background="@drawable/roundedbutton_select"
            android:gravity="left|center_vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/newrecruit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_button"
            android:layout_marginTop="10dp"
            android:text="@string/newrecruit_text"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/newrecruit_text"
            android:layout_below="@id/newrecruit_text"
            android:clickable="true"
            android:text="@string/reg_text"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/passwordrecover_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/newrecruit_text"
            android:layout_alignBottom="@+id/newrecruit_text"
            android:layout_alignRight="@+id/pass_log"
            android:text="Forgot Password?" />

    </RelativeLayout>

</RelativeLayout>
