<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Setting" >

     <TextView
        android:id="@+id/setting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/setting_box"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:text="@string/setting_text"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp" />
     
    <RelativeLayout
        android:id="@+id/setting_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/setting_title"
        android:layout_centerVertical="true"
        android:background="@drawable/roundedbuttonhome_normal" >

        <TextView
            android:id="@+id/music_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="26dp"
            android:paddingBottom="35dp"
            android:text="@string/music_text"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sfx_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/music_title"
            android:layout_below="@id/music_title"
            android:text="@string/sfx_text"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/sfx_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/music_switch"
            android:layout_alignTop="@+id/sfx_title"
            android:checked="true" />

        <Switch
            android:id="@+id/music_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/music_title"
            android:layout_marginLeft="85dp"
            android:layout_toRightOf="@+id/music_title"
            android:checked="true" />

    </RelativeLayout>

   

</RelativeLayout>
